# Games

./: .gitignore  CMakeLists.txt  imgui.ini  pe-config.json  peconfig.json  scene1.json  scene2.json  textures.json
ECS/: Entity.h  Layer.h  Serializer.h
ECS/Components/: ImageComponent.h  Sprite.cpp  TileMap.h  Transform2DComponent.cpp
ECS2/: ECS.h  Entity.cpp  Entity.h  EntityManager.cpp  Scene.cpp  Scene.h  Sprite.h
ECS2/Components/: Animation.h  AnimationComponent.cpp  AnimationComponent.h  Component.h  Components.h  ImageComponent.cpp  InputComponent.h  Sprite.h  TileMap.cpp
Plutus/: CMakeLists.txt
Plutus/libs/freetype/lib/: freetype.lib  freetype32.lib
Plutus/libs/freetype/lib/x64/: freetype.lib
Plutus/libs/freetype/src/autofit/: aflatin2.c
Plutus/libs/freetype/src/base/: ftbase.c  ftver.aps
Plutus/libs/glad/include/glad/: glad.h
Plutus/libs/glad/src/: glad.c
Plutus/src/: IMainGame.cpp  IMainGame.h  JSON.h  Utils.cpp  Utils.h  Window.cpp  Window.h  all.h
Plutus/src/Assets/: AssetManager.cpp  AssetManager.h  IOManager.h
Plutus/src/Core/: Engine.cpp  Engine.h  IGameScreen.h  IMainGame.cpp  IMainGame.h
Plutus/src/ECS/: AnimationComponent.cpp  AnimationComponent.h  Component.h  Component2.h  Components.h  Entity.cpp  Entity.h  Entity2.h  EntityManager.cpp  EntityManager.h  ImageComponent.cpp  ImageComponent.h  InputComponent.cpp  Scene.cpp  Scene.h  SceneLoader.cpp  SceneLoader.h  SpriteComponent.h  TileComponent.h  Transform2DComponent.cpp  Transform2DComponent.h
Plutus/src/ECS/Components/: Animate.cpp  Animate.h  Component.h  Sprite.cpp  Sprite.h  TileMap.cpp  TileMap.h  Transform.cpp  Transform.h
Plutus/src/ECS2/: Animation.h  Components.h  Entity.cpp  Entity.h  Layer.cpp  Layer.h  Scene.cpp  Scene.h
Plutus/src/Graphics/: Camera2D.cpp  Camera2D.h  DebugRenderer.cpp  DebugRenderer.h  GLSL.cpp  GLSL.h  GLheaders.h  IndexBuffer.cpp  Renderable2D.h  Renderer2D.h  Shader.cpp  SpriteBatch.cpp  SpriteBatch.h  SpriteBatch2D.cpp  SpriteBatch2D.h  vertex.h
Plutus/src/Input/: Event.cpp  Event.h  GamePad.cpp  GamePad.h  GamePadButtons.h  InputManager.cpp  InputManager.h
Plutus/src/Input/Win32/: XinputHandler.cpp  XinputHandler.h
Plutus/src/ParticleSystem/: ParticleBatch.cpp  ParticleBatch.h  ParticleEngine.cpp  ParticleEngine.h
Plutus/src/Screen/: IGameScreen.h  ScreenList.cpp  ScreenList.h
Plutus/src/Serialize/: Deserialize.h  Serialize.h
Plutus/src/Sound/: AudioEvent.cpp  SoundLoader.cpp  SoundManager.cpp  SoundManager.h  StringUtil.cpp  StringUtil.h  types.h
Plutus/src/TextRender/: TextLayer.cpp  TextLayer.h  TextLeyerShaders.h
Plutus/src/Texture/: Sprite2D.cpp  Sprite2D.h  Texture.h  TextureManager.cpp  TextureManager.h  TileSheet.h
Plutus/src/Time/: Timer.cpp  Timer.h  Timing.cpp  Timing.h
PlutusEditor/: CMakeLists.txt  EditorUI.cpp  EditorUI.h  FrameBuffer.h  ImGuiEx.h  LayerEditor.cpp
PlutusEditor/Panels/: ComponentPanel.cpp  ComponentPanel.h  EntityEditor.cpp  EntityEditor.h  TileMapPanel.cpp  TileMapPanel.h
src/: App.cpp  App.h  main.cpp
src/Editor/: EditorUI.cpp  EditorUI.h  FrameBuffer.cpp  LayerEditor.h
src/Screens/: EditorScreen.cpp  EditorScreen.h  GameScreen.cpp  GameScreen.h
temp/: App.cpp  App.h
temp/Editor/: ComponentPropsUI.h  EditorUI.cpp  FrameBuffer.h  ImGuiEx.h  LayerEditor.cpp
